removed console logs, dbugs, and fixed final spacing

--- a/static/css/timetable/search_bar.css
+++ b/static/css/timetable/search_bar.css
@@ -180,7 +180,7 @@
 	float: left;
     line-height: 15px;
 	padding: 0;
-	margin: 3px 0 0;
+	margin: 3px 5px 0 0;
 }
 .search-course .label.bubble {
 	background-color: #DEDEDE;
